Adding message-api to docker-compose. Improved readme.md.